# satgalaxy-rs

./: .gitignore  .gitmodules  Cargo.toml  LICENSE  README.md  build.rs
bindings/: cadical_bindings.rs  glucose_bindings.rs  minisat_bindings.rs  picosat_bindings.rs
patches/: glucose.patch  minisat.patch
pest/: dimacs.pest
src/: lib.rs
src/errors/: mod.rs  parser.rs
src/parser/: mod.rs
src/parser/dimacs/: mod.rs
src/solver/: base.rs  cadical.rs  glucose.rs  minisat.rs  mod.rs  picosat.rs
