[package]
authors = ["Xie Zhongtao"]
categories = ["science", "mathematics"]
description = "rssat is a Rust library that provides Rust bindings for multiple popular SAT solvers"
edition = "2021"
keywords = ["sat", "minisat", "cadical", "glucose", "slover"]
license = "MIT"
name = "rssat"
repository = "https://github.com/francisol/rssat.git"
version = "0.1.5"

[package.metadata.docs.rs]

features = [""]

# Whether to pass `--no-default-features` to Cargo (default: false)
no-default-features = true

# Target to test build on, used as the default landing page (default: "x86_64-unknown-linux-gnu")
#
# Any target supported by rustup can be used.
default-target = "x86_64-unknown-linux-gnu"

[dependencies]
pest = {version= "2.7.13", optional = true}
pest_derive = {version="2.7.13", optional = true}
thiserror = {version = "1.0", optional = true}
[build-dependencies]
bindgen = "0.70.1"
cmake = "0.1"
flate2 = "1.0"
reqwest = {version = "0.12", features = ["blocking", "rustls-tls"], default-features = false}
tar = "0.4"
[features]
cadical = []
default = ["glucose", "minisat", "cadical","dimacs"]
dimacs = ["parser","pest_derive","pest"]
parser = ["thiserror"]
glucose = []
minisat = []
